--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -7,11 +7,9 @@ tags: [deeplearning]
 
 ## 예측, 점을 넘어 분포로: 모델이 불확실성을 이야기하는 방법(훈련 단계)
 
-**(회귀 문제에서 Pr(y|x)와 최대 가능도 손실 함수의 이해)**
-
 기존의 많은 머신러닝 회귀 모델은 입력 $x$가 주어졌을 때, 특정 출력값 $y$ 하나만을 예측하는 방식으로 작동한다. 예를 들어, "내일의 예상 기온은 25도"와 같이 명확한 하나의 숫자를 제시한다. 하지만 현실 세계의 많은 문제는 본질적으로 불확실성을 내포한다. "내일 기온이 정확히 25도일까, 아니면 24도나 26도일 가능성은 없을까?" 이런 질문에 답하기 위해, 모델이 단순히 점(point) 예측을 넘어 출력값에 대한 전체 **확률 분포(probability distribution)**를 예측하는 접근 방식이 중요해지고 있다.
 
-### 1. 점 예측의 한계와 분포 예측의 등장
+### 점 예측의 한계와 분포 예측의 등장
 
 전통적인 회귀 모델은 입력 $x$에 대해 최적의 단일 예측값 $\hat{y}$를 찾는 것을 목표로 한다. 예를 들어, 최소 제곱 오차(Mean Squared Error, MSE)를 손실 함수로 사용하는 선형 회귀 모델은 평균적인 예측을 제공하려 하지만, 그 예측이 얼마나 확실한지에 대한 정보는 주지 않는다.
 
@@ -22,7 +20,7 @@ tags: [deeplearning]
 
 이러한 분포 예측은 "내일 기온은 평균 25도이고, 표준편차는 1.5도인 정규분포를 따를 것으로 예상된다"와 같이 훨씬 풍부한 정보를 제공할 수 있다. 이를 통해 우리는 예측값 주변의 신뢰 구간을 설정하거나, 특정 값 이상/이하일 확률 등을 계산할 수 있게 된다.
 
-### 2. 모델은 어떻게 분포를 학습할까? - 손실 함수의 역할
+### 모델은 어떻게 분포를 학습할까? - 손실 함수의 역할
 
 모델이 $Pr(y|x)$라는 확률 분포를 예측하도록 학습시키기 위해서는 손실 함수의 역할이 중요하다. 여기서 핵심적인 아이디어는 **최대 가능도 추정 (Maximum Likelihood Estimation, MLE)**이다. MLE의 기본 원리는 "우리가 가지고 있는 학습 데이터 $\{x_i, y_i\}$가 현재 모델 하에서 나타날 가능성(가능도, likelihood)이 가장 높아지도록 모델의 파라미터(가중치, 편향 등)를 조정하자"는 것이다.
 
@@ -42,7 +40,7 @@ tags: [deeplearning]
     *   반대로, 모델이 실제 정답 $y_i$에 낮은 확률을 할당한다면, $\log Pr(y_i|x_i)$는 매우 큰 음수가 되고, $-\log Pr(y_i|x_i)$는 큰 양수가 되어 손실이 커진다.
     *   따라서 모델은 학습 과정에서 이 NLL 손실을 줄이기 위해 실제 정답에 높은 확률을 부여하는 방향으로 파라미터 $\theta$를 업데이트하게 된다.
 
-### 3. 시각적으로 이해하기
+### 시각적으로 이해하기
 
 (앞선 대화에서 언급된 그림 5.1(a)와 같은 상황을 상상해보자)
 
@@ -51,7 +49,7 @@ tags: [deeplearning]
 *   모델이 학습된 후, 특정 입력 $x_{test}$ (예: $x=2.0$ 또는 $x=7.0$)에 대해 모델이 예측하는 **출력 분포 $Pr(y|x_{test})$는 청록색 곡선(예: 정규분포의 확률 밀도 함수)으로 시각화**될 수 있다.
 *   **잘 학습된 모델이라면**, 각 학습 데이터의 주황색 점 $y_i$는 해당 $x_i$에 대한 청록색 예측 분포 곡선에서 확률이 높은, 즉 곡선이 봉긋 솟아있는 부분에 위치하게 될 것이다. 손실 함수는 바로 이러한 상태를 목표로 모델을 이끌어간다.
 
-### 4. 개념적 구현 단계
+### 개념적 구현 단계
 
 실제로 신경망 모델이 확률 분포를 예측하도록 하려면 다음과 같은 단계를 고려할 수 있다:
 
@@ -63,7 +61,7 @@ tags: [deeplearning]
 3.  **손실 함수 구현**: 선택된 분포의 확률 밀도 함수(PDF)나 확률 질량 함수(PMF)를 사용하여 NLL을 계산한다.
     *   정규분포의 경우, $Pr(y|x; \mu(x), \sigma^2(x))$는 정규분포의 PDF가 된다. 이 PDF에 실제 $y_i$와 모델이 예측한 $\mu(x_i)$, $\sigma^2(x_i)$를 대입하여 가능도를 계산하고, 이를 통해 NLL 손실을 구성한다.
 
-### 5. 분포 예측의 강력한 이점
+### 분포 예측의 강력한 이점
 
 출력에 대한 분포를 예측하는 방식은 다음과 같은 중요한 이점을 제공한다:
 
@@ -82,7 +80,7 @@ tags: [deeplearning]
 
 이 과정에서 모델은 방대한 데이터를 어떻게 효율적으로 다루며, 각 데이터는 학습에 어떤 영향을 미칠까? 여기서 핵심은 바로 "독립적이고 동일하게 분포되어 있다 (independent and identically distributed, i.i.d.)"는 통계적 가정과, 실제 학습이 이루어지는 배치(batch) 단위의 처리 방식이다.
 
-### 1. 모델의 예측: 점이 아닌 분포, 그리고 그 분포의 파라미터
+### 모델의 예측: 점이 아닌 분포, 그리고 그 분포의 파라미터
 
 먼저, 모델이 어떻게 각 데이터에 대해 확률 분포를 예측하는지 다시 한번 짚어보자.
 
@@ -92,7 +90,7 @@ tags: [deeplearning]
 
 - 중요한 것은, 서로 다른 입력 $x_i$와 $x_j$에 대해서는 일반적으로 서로 다른 파라미터 $(\mu_i, \sigma_i^2)$와 $(\mu_j, \sigma_j^2)$가 예측된다는 점이다. 이는 각 데이터 포인트마다 고유한 특성을 반영한 맞춤형 확률 분포가 생성됨을 의미한다.
 
-### 2. i.i.d. 가정의 힘
+### i.i.d. 가정의 힘
 
 모델의 궁극적인 학습 목표는 주어진 모든 학습 데이터 $\{ (x_i, y_i) \}$가 현재 모델 하에서 가장 잘 설명되도록, 즉 나타날 가능성(가능도, likelihood)이 최대가 되도록 모델의 내부 파라미터 $\phi$를 찾는 것이다. 전체 데이터셋에 대한 이 결합 가능성을 효율적으로 다루기 위해 두 가지 중요한 통계적 가정이 필요하다.
 
@@ -115,7 +113,7 @@ $$
 
 이 두 가지 가정을 합쳐 i.i.d. 가정이라 부르며, 이는 수많은 머신러닝 알고리즘과 통계적 추론의 이론적 기반을 제공한다.
 
-### 3. 실제 학습의 작동 방식: 배치 단위 처리와 가능도 계산
+### 실제 학습의 작동 방식: 배치 단위 처리와 가능도 계산
 
 6만 개의 데이터를 한 번에 처리하여 위 곱셈을 계산하는 것은 현실적으로 어렵다. 그래서 딥러닝에서는 데이터를 작은 묶음, 즉 배치(batch)로 나누어 순차적으로 학습을 진행한다.
 
@@ -141,7 +139,7 @@ $$
 
 이 과정이 200개의 모든 배치에 대해 순차적으로 반복되면 1 에포크가 완료되며, 모델은 이러한 에포크를 여러 번 반복하며 점차 데이터의 복잡한 패턴과 불확실성을 학습하게 된다.
 
-### 4. 가정의 의미와 한계
+### 가정의 의미와 한계
 
 i.i.d. 가정은 수학적 모델링과 계산을 간편하게 만들어주지만, 현실 데이터가 항상 이 가정을 완벽하게 만족하지는 않는다. 예를 들어 시계열 데이터의 경우, 현재의 데이터 포인트가 과거의 데이터 포인트에 의존하는 경우가 많아 독립성 가정이 깨질 수 있다. 그럼에도 불구하고, i.i.d. 가정은 많은 경우에 유용한 근사치를 제공하며, 복잡한 현상을 이해하고 모델링하는 첫걸음이 된다.
 
