--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -15,8 +15,8 @@ tags: [deeplearning]
 
 이에 반해, **분포 예측**은 입력 $x$가 주어졌을 때 가능한 모든 출력 $y$ 값들에 대한 확률을 나타내는 함수, 즉 **조건부 확률 분포 $Pr(y\|x)$**를 모델링한다.
 
-*   **$Pr(y\|x)$란?**: "입력 $x$의 조건 하에서, 출력이 $y$일 확률"을 의미한다.
-*   **시각화**: 만약 $y$가 연속적인 실수 값이라면, $Pr(y\|x)$는 특정 $x$에 대해 종 모양의 곡선(예: 정규분포)으로 나타날 수 있다. 이 곡선의 넓이는 1이며, 특정 구간의 넓이는 $y$가 해당 구간에 속할 확률을 나타낸다. 곡선의 봉우리가 높은 곳은 $y$가 발생할 확률이 높은 지점이며, 넓게 퍼진 곡선은 예측의 불확실성이 크다는 것을 의미한다.
+*   $Pr(y\|x)$란?: "입력 $x$의 조건 하에서, 출력이 $y$일 확률"을 의미한다.
+*   시각화: 만약 $y$가 연속적인 실수 값이라면, $Pr(y\|x)$는 특정 $x$에 대해 종 모양의 곡선(예: 정규분포)으로 나타날 수 있다. 이 곡선의 넓이는 1이며, 특정 구간의 넓이는 $y$가 해당 구간에 속할 확률을 나타낸다. 곡선의 봉우리가 높은 곳은 $y$가 발생할 확률이 높은 지점이며, 넓게 퍼진 곡선은 예측의 불확실성이 크다는 것을 의미한다.
 
 이러한 분포 예측은 "내일 기온은 평균 25도이고, 표준편차는 1.5도인 정규분포를 따를 것으로 예상된다"와 같이 훨씬 풍부한 정보를 제공할 수 있다. 이를 통해 우리는 예측값 주변의 신뢰 구간을 설정하거나, 특정 값 이상/이하일 확률 등을 계산할 수 있게 된다.
 
@@ -33,7 +33,7 @@ $$
 $$
 여기서 $N$은 전체 학습 데이터의 수이다.
 
-*   **작동 방식**:
+*   작동 방식:
     *   만약 특정 입력 $x_i$에 대해 모델이 예측한 분포 $Pr(y\|x_i)$가 실제 정답 $y_i$ 근처에서 높은 확률 값을 가진다면 (즉, $Pr(y_i\|x_i)$가 크다면), $\log Pr(y_i\|x_i)$는 덜 음수가 되고, $-\log Pr(y_i\|x_i)$는 작은 양수가 되어 손실이 작아진다.
     *   반대로, 모델이 실제 정답 $y_i$에 낮은 확률을 할당한다면, $\log Pr(y_i\|x_i)$는 매우 큰 음수가 되고, $-\log Pr(y_i\|x_i)$는 큰 양수가 되어 손실이 커진다.
     *   따라서 모델은 학습 과정에서 이 NLL 손실을 줄이기 위해 실제 정답에 높은 확률을 부여하는 방향으로 파라미터 $\theta$를 업데이트하게 된다.
@@ -42,10 +42,10 @@ $$
 
 (앞선 대화에서 언급된 그림 5.1(a)와 같은 상황을 상상해보자)
 
-*   **X축**은 입력 변수 $x$, **Y축**은 출력 변수 $y$를 나타낸다.
-*   **주황색 점들**은 우리가 가진 실제 학습 데이터 $(x_i, y_i)$ 쌍들을 나타낸다.
-*   모델이 학습된 후, 특정 입력 $x_{test}$ (예: $x=2.0$ 또는 $x=7.0$)에 대해 모델이 예측하는 **출력 분포 $Pr(y\|x_{test})$는 청록색 곡선(예: 정규분포의 확률 밀도 함수)으로 시각화**될 수 있다.
-*   **잘 학습된 모델이라면**, 각 학습 데이터의 주황색 점 $y_i$는 해당 $x_i$에 대한 청록색 예측 분포 곡선에서 확률이 높은, 즉 곡선이 봉긋 솟아있는 부분에 위치하게 될 것이다. 손실 함수는 바로 이러한 상태를 목표로 모델을 이끌어간다.
+*   X축은 입력 변수 $x$, Y축은 출력 변수 $y$를 나타낸다.
+*   주황색 점들은 우리가 가진 실제 학습 데이터 $(x_i, y_i)$ 쌍들을 나타낸다.
+*   모델이 학습된 후, 특정 입력 $x_{test}$ (예: $x=2.0$ 또는 $x=7.0$)에 대해 모델이 예측하는 출력 분포 $Pr(y\|x_{test})$는 청록색 곡선(예: 정규분포의 확률 밀도 함수)으로 시각화될 수 있다.
+*   잘 학습된 모델이라면, 각 학습 데이터의 주황색 점 $y_i$는 해당 $x_i$에 대한 청록색 예측 분포 곡선에서 확률이 높은, 즉 곡선이 봉긋 솟아있는 부분에 위치하게 될 것이다. 손실 함수는 바로 이러한 상태를 목표로 모델을 이끌어간다.
 
 ### 개념적 구현 단계
 
