--- a/_posts/2025-5-7-확률분포 예측2.md
+++ b/_posts/2025-5-7-확률분포 예측2.md
@@ -78,7 +78,7 @@ $$
 
 ## 3. 추론: 최적 단일 예측값 $\hat{y}$의 결정
 
-모델 학습 완료 후 최적 파라미터 $\hat{\phi}$가 도출되었다고 가정한다. 새로운 입력 $\mathbf{x}$에 대한 최종 예측값 $\hat{y}$는 어떻게 결정되는가? (5.3.2 Inference 섹션 참조)
+모델 학습 완료 후 최적 파라미터 $\hat{\phi}$가 도출되었다고 가정한다. 새로운 입력 $\mathbf{x}$에 대한 최종 예측값 $\hat{y}$는 어떻게 결정되는가?
 
 모델은 $y$에 대한 전체 확률 분포 $Pr(y|f[\mathbf{x}, \hat{\phi}], \sigma^2)$를 제공하나, 실제로는 가장 가능성 높은 단일 예측값이 요구된다. 이를 위해 예측된 분포에서 확률(밀도)이 가장 높은 지점을 선택한다.
 
