--- a/_posts/2025-5-9-확률 분포 예측3.md
+++ b/_posts/2025-5-9-확률 분포 예측3.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: '바이너리, 카테고리 손실함수, 음의 가능도 손실함수, kl발산과 크로스 엔트로피'
+title: '바이너리, 카테고리 손실함수, 음의 가능도 손실함수'
 excerpt: 'deeplearning'
 tags: [deeplearning]
 ---
