--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -40,7 +40,7 @@ $$
 
 ### 시각적으로 이해하기
 
-(앞선 대화에서 언급된 그림 5.1(a)와 같은 상황을 상상해보자)
+![image-20250512113936132](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250512113936132.png)
 
 *   X축은 입력 변수 $x$, Y축은 출력 변수 $y$를 나타낸다.
 *   주황색 점들은 우리가 가진 실제 학습 데이터 $(x_i, y_i)$ 쌍들을 나타낸다.
@@ -58,6 +58,8 @@ $$
     *   예를 들어 정규분포를 가정한다면, 네트워크는 두 개의 출력 노드를 가질 수 있다. 하나는 $\mu(x)$를 예측하고, 다른 하나는 $\log(\sigma^2(x))$ 또는 $\sigma(x)$를 예측한다. (분산은 항상 양수여야 하므로, 직접 분산을 예측하기보다는 로그-분산을 예측한 후 지수 함수를 취하거나, ReLU와 같은 활성화 함수를 통해 양수성을 보장하는 방법을 사용한다.)
 3.  **손실 함수 구현**: 선택된 분포의 확률 밀도 함수(PDF)나 확률 질량 함수(PMF)를 사용하여 NLL을 계산한다.
     *   정규분포의 경우, $Pr(y\|x; \mu(x), \sigma^2(x))$는 정규분포의 PDF가 된다. 이 PDF에 실제 $y_i$와 모델이 예측한 $\mu(x_i)$, $\sigma^2(x_i)$를 대입하여 가능도를 계산하고, 이를 통해 NLL 손실을 구성한다.
+
+![image-20250512114143697](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250512114143697.png)
 
 ### 분포 예측의 강력한 이점
 
