--- a/_posts/2025-5-9-확률 분포 예측3.md
+++ b/_posts/2025-5-9-확률 분포 예측3.md
@@ -33,13 +33,21 @@ $L(\phi) = -\sum_i [y_i \log(\hat{\lambda}_i) + (1-y_i) \log(1-\hat{\lambda}_i)]
 1.  모든 $k$에 대해 $\lambda_k \ge 0$
 2.  $\sum_{k=1}^K \lambda_k = 1$
 
-신경망은 $K$개의 원시 출력(로짓) $\vec{z} = (z_1, ..., z_K)$을 생성하고, 이들을 **소프트맥스 함수(softmax function)**에 통과시켜 위의 제약 조건을 만족하는 확률 벡터 $\hat{\vec{\lambda}}$를 얻는다:
+# 신경망의 소프트맥스와 교차 엔트로피 손실
 
-$\hat{\lambda}_k = \text{softmax}(\vec{z})_k = \frac{e^{z_k}}{\sum_{j=1}^K e^{z_j}}$
+신경망은 $K$개의 원시 출력(로짓) $\vec{z} = (z_1, ..., z_K)$을 생성하고, 이들을 소프트맥스 함수(softmax function)에 통과시켜 위의 제약 조건을 만족하는 확률 벡터 $\hat{\vec{\lambda}}$를 얻는다.
 
-각 $\hat{\lambda}_k$는 모델이 입력 $x$에 대해 범주 $k$를 예측하는 확률 $P(y=k\|x)$가 된다. 만약 실제 레이블 $y_i$가 원-핫 인코딩된 벡터 (실제 클래스에 해당하는 원소만 1이고 나머지는 0) $y_{ik}$로 표현된다면, NLL은 **카테고리 교차 엔트로피(categorical cross-entropy)** 손실이 된다:
+$$
+\hat{\lambda}_k = \text{softmax}(\vec{z})_k = \frac{e^{z_k}}{\sum_{j=1}^K e^{z_j}}
+$$
 
-$L(\phi) = -\sum_i \sum_k y_{ik} \log(\hat{\lambda}_{ik})$
+각 $\hat{\lambda}_k$는 모델이 입력 $x$에 대해 범주 $k$를 예측하는 확률 $P(y=k\|x)$가 된다.
+
+만약 실제 레이블 $y_i$가 원-핫 인코딩된 벡터(실제 클래스에 해당하는 원소만 1이고 나머지는 0) $y_{ik}$로 표현된다면, NLL은 카테고리 교차 엔트로피(categorical cross-entropy) 손실이 된다.
+
+$$
+L(\phi) = -\sum_i \sum_k y_{ik} \log(\hat{\lambda}_{ik})
+$$
 
 ## 3. 핵심 원리: 모델은 분포의 파라미터를 예측하고, 학습을 통해 개선한다
 
