--- a/_posts/2025-5-9-확률 분포 예측3.md
+++ b/_posts/2025-5-9-확률 분포 예측3.md
@@ -33,7 +33,7 @@ $L(\phi) = -\sum_i [y_i \log(\hat{\lambda}_i) + (1-y_i) \log(1-\hat{\lambda}_i)]
 1.  모든 $k$에 대해 $\lambda_k \ge 0$
 2.  $\sum_{k=1}^K \lambda_k = 1$
 
-# 신경망의 소프트맥스와 교차 엔트로피 손실
+### 신경망의 소프트맥스와 교차 엔트로피 손실
 
 신경망은 $K$개의 원시 출력(로짓) $\vec{z} = (z_1, ..., z_K)$을 생성하고, 이들을 소프트맥스 함수(softmax function)에 통과시켜 위의 제약 조건을 만족하는 확률 벡터 $\hat{\vec{\lambda}}$를 얻는다.
 
