--- a/_posts/2024-12-27-선형대수학 3강 대수구조.md
+++ b/_posts/2024-12-27-선형대수학 3강 대수구조.md
@@ -1,14 +1,11 @@
 ---
 key:
-title: '선형대수학 3강 대수구조와 벡터공간'
-excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
+title: '선형대수학 대수구조와 벡터공간'
+excerpt: '딥러닝을 위해 필요한 내용'
 tags: [선형대수학]
 ---
 
 
-우리는 지금까지 선형대수학의 기초를 봤고 이제 수학적으로 정의한 벡터에 대해 다루려고 한다, 그리고 그게 바로 벡터공간이다.
-
-그를 위해 군론이라는 체계를 이용해서 벡터와 행렬에 대해 정의하고 다루고자 한다.
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231228002940957.png" alt="image-20231228002940957" style="zoom:50%;" />
 
@@ -107,3 +104,4 @@ span(S)=[k(1,0)+m(0,1)\ |\ k,m \in F]\\
 =R^2
 $$
 이 식에서의 선형생성의 의미는 2차원 실수벡터공간(유클리드 공간)이 된다, 즉 **S라는 집합은 2차원 실수벡터공간을 만들어 낼 수 있다는 말**이다, S집합은 (1,0),(0,1) 두개의 벡터로 이루어진 집합이였다, 이 두 벡터는 2차원 실수벡터공간을 만들어내는데 있어서 근본적인 역할을 할 수 있다. 이 두 벡터로 안에 있는 모든 원소들을 선형결합할 수 있기 때문이다.
+
