--- a/_posts/2024-12-29-선형대수학 4강 정리 1.md
+++ b/_posts/2024-12-29-선형대수학 4강 정리 1.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: '선형대수학 4강 정리1'
+title: '선형대수학 정리1'
 excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
 tags: [선형대수학]
 
@@ -18,7 +18,7 @@ tags: [선형대수학]
 
 이 함수에서 보듯이 꼭 직선함수라고 해서 선형이라고 말 할수는 없다. n이라는 항이 사라져야 슈퍼포지션과, 호모지니어티가 성립해서 선형이 될 수 있다. 즉 n=0일때만, 직선이 원점을 지날때 만 linear하다라고 말 할수 있다, x와 y가 비례한다라고 말 할수 있다. 이걸 2차원 말고 3차원으로 확장하면 평면도 원점을 지나는 평면만 linear하다라고 말 할수 있다.
 
-미분, 적분은 함수는 아니고 함수에 대해 가하는 연산이다, 여기서도 linear인지 아닌지 말 할수 있다.
+미분, 적분은 함수는 아니고 함수에 대해 가하는 연산이다, 여기서도 linear인지 아닌지 말 할수 있다. 
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229152540635.png" alt="image-20231229152540635" style="zoom:67%;" />
 
@@ -32,7 +32,7 @@ tags: [선형대수학]
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229154021465.png" alt="image-20231229154021465" style="zoom:67%;" />
 
-이제는 벡터를 그냥 데이터들의 나열쯤으로 이해하면 된다, 우리가 딥러닝을 할 때 예를 들면 이미지 6만장을 넣는다고 해보자, 그러면 입력값으로 [60000,r,g,b,이미지x값,이미지y값] 이렇게 5차원 이상도 넘어간다, 그러므로 이런식의 이해가 중요하다. $x \in R^n$이라고 생각하자.
+이제는 벡터를 그냥 데이터들의 나열쯤으로 이해하면 된다, 우리가 딥러닝을 할 때 예를 들면 이미지 6만장을 넣는다고 해보자, 그러면 입력값으로 [60000,r,g,b,이미지x값,이미지y값] 이렇게 5차원 이상도 넘어간다,  $x \in R^n$이라고 생각하자.
 
 <img src="https://raw.githubusercontent.com/kirity1/blogimages/main/uPic/image-20231229154356736.png" alt="image-20231229154356736" style="zoom:67%;" />
 
