--- a/_posts/2025-10-27-이진화와 오츄 알고리즘.md
+++ b/_posts/2025-10-27-이진화와 오츄 알고리즘.md
@@ -121,15 +121,21 @@ plot_img(images, titles)
 
 ```
 
-- `for i in range(1, 256)`: 가능한 모든 임계값을 순회합니다.
-- `p1, p2 = np.hsplit(hist_norm, [i])`: 현재 임계값 `i`를 기준으로 히스토그램을 두 개의 부분으로 분할합니다.
-- `q1, q2 = CDF[i], CDF[255] - CDF[i]`: 두 부분의 누적 합을 계산합니다.
-- `if q1 == 0: q1 = 0.0000001`: 누적 합이 0인 경우를 방지하기 위해 작은 값을 더합니다.
-- `b1, b2 = np.hsplit(bins, [i])`: 동일한 위치에서 `bins` 배열을 분할합니다.
-- `m1, m2`: 두 부분의 평균을 계산합니다.
-- `v1, v2`: 두 부분의 분산을 계산합니다.
-- `fn = v1 * q1 + v2 * q2`: 최소화할 함수 값을 계산합니다.
-- `if fn < fn_min`: 현재 함수 값이 최소 함수 값보다 작으면 갱신합니다.
+`for i in range(1, 256)`: 0부터 255까지 모든 가능한 임계값(Threshold) 후보를 하나씩 다 돌려본다. (Brute-force 방식)
+
+`p1, p2 = np.hsplit(hist_norm, [i])`: 현재 돌고 있는 임계값 `i`를 기준으로 히스토그램을 딱 잘라서, **배경**과 **객체** 두 그룹으로 나눈다.
+
+`q1, q2`: 나눠진 두 그룹이 전체 이미지에서 차지하는 비율(가중치)을 구한다.
+
+`if q1 == 0: ...`: 만약 한쪽 그룹에 픽셀이 하나도 없으면 0으로 나누는 에러가 발생해서, 아주 작은 수를 더해 예외 처리를 해줬다.
+
+`b1, b2`: 픽셀 밝기값(bins) 배열도 임계값 `i`에 맞춰서 쪼갠다.
+
+`m1, m2` / `v1, v2`: 나눠진 두 그룹 각각의 **평균**과 **분산**을 계산한다.
+
+`fn = v1 * q1 + v2 * q2`: **[핵심]** 두 그룹의 분산을 가중 평균 낸 값(Within-Class Variance)이다. 이 값이 작을수록 "같은 그룹끼리 잘 뭉쳐있다"는 뜻이므로, 우리는 이 `fn`이 최소가 되는 지점을 찾아야 한다.
+
+`if fn < fn_min`: 방금 계산한 분산값(`fn`)이 지금까지 찾은 최소값보다 작다면, "어? 이번 `i`가 더 좋네?" 하고 최적의 임계값(`thresh`)을 갱신한다.
 
 ![image-20240528220412476](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528220412476.png)
 
