--- a/_posts/2025-5-18-SGD.md
+++ b/_posts/2025-5-18-SGD.md
@@ -5,7 +5,7 @@ excerpt: 'deeplearning'
 tags: [deeplearning]
 ---
 
-# 경사 하강법의 진화: SGD와 모멘텀으로 최적화 여정 개선하기
+# 경사 하강법의 진화: SGD와 모멘텀으로 최적화 개선하기
 
 이전 글들에서는 선형 회귀의 볼록 손실 함수와 달리, 대부분의 비선형 모델, 특히 딥러닝 모델의 손실 함수가 비볼록(non-convex)하여 지역 최솟값이나 안장점 같은 여러 난관이 존재함을 살펴보았다. 이러한 복잡한 손실 함수 위에서 최적의 파라미터를 찾기 위해 기본 경사 하강법(Gradient Descent)에서 발전된 여러 기법들이 사용된다. 이번 글에서는 그중 핵심적인 **확률적 경사 하강법(Stochastic Gradient Descent, SGD)**과 이를 개선한 **모멘텀(Momentum)** 방식에 대해 알아본다.
 
@@ -71,8 +71,8 @@ $$ \phi_{t+1} \leftarrow \phi_t - \alpha \cdot \mathbf{m}_{t+1} $$
 *   첫 번째 식: 새로운 모멘텀 $\mathbf{m}_{t+1}$은 이전 모멘텀과 현재 미니배치 그래디언트의 가중 합으로 계산된다. (지수 이동 평균의 형태)
 *   두 번째 식: 파라미터는 이 새로운 모멘텀 $\mathbf{m}_{t+1}$ 방향으로 학습률 $\alpha$만큼 업데이트된다.
 
-**질문**: "SGD에서 배치의 랜덤성 때문에(뽑는게 랜덤이니까) 학습이 매번 불안정할 수 있는 것 때문에 모멘텀을 도입한 건가?"
-**답변**: 정확하다. 모멘텀은 SGD 그래디언트의 노이즈를 완화하고 학습 경로를 안정화하며, 특정 조건에서는 학습을 가속하는 효과도 있다.
+"SGD에서 배치의 랜덤성 때문에(뽑는게 랜덤이니까) 학습이 매번 불안정할 수 있는 것 때문에 모멘텀을 도입한 건가?"
+모멘텀은 SGD 그래디언트의 노이즈를 완화하고 학습 경로를 안정화하며, 특정 조건에서는 학습을 가속하는 효과도 있다.
 
 ### 2.2. 모멘텀의 효과
 
