--- a/_posts/2024-12-31-선형대수학 7강 선형연립방정식의 3가지 유형.md
+++ b/_posts/2024-12-31-선형대수학 7강 선형연립방정식의 3가지 유형.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: '선형대수학 7강 선형연립방정식의 3가지 유형과 벡터스페이스'
+title: '선형대수학 선형연립방정식의 3가지 유형과 벡터스페이스'
 excerpt: '딥러닝을 위해 필요한 내용을 다룹니다.'
 tags: [선형대수학]
 
