--- a/_posts/2025-3-3-생성 모델링 이론.md
+++ b/_posts/2025-3-3-생성 모델링 이론.md
@@ -35,7 +35,7 @@ tags: [AE]
 
 ![img](https://velog.velcdn.com/images/alwls5773/post/669a13df-7eb8-40b7-899a-f730d809897c/image.png)
 
-다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 맞닿아 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩,여기선 포인트)들을 모아놓은 잠재공간에서 역으로 그 공간에서 포인트를 선택해 **이미지를 생성함(샘플링)도 가능**하다는 것이다.
+다시 돌아와서, 결국 앞에 말했던 정보를 최소화한다라는 말은 **입력이미지에서 차원을 낮춰가면서 특징을 포착해낸다** 라는 특성과 관련이 있음을 말한다. 그리고 특징을 포착해낸 모든 벡터(임베딩,여기선 포인트)들을 모아놓은 잠재공간에서 역으로 그 공간에서 포인트를 선택해 **이미지를 생성함(샘플링)도 가능**하다는 것이다.
 
 입력 데이터인 784개의 뉴런들을 500개, 300개, 2개로 압축시킴으로써 입력 데이터의 대표적인 특성을 추출한다. 그리고 이를 기반으로 다시 대칭적인 구조로 300개, 500개 뉴런으로 확장시킨 후 최종적으로 입력 데이터와 똑같은 사이즈인 784개의 뉴런 개수로 최종 값을 출력시킨다. 이러한 구조들로 보통 만들어 진다고 한다.
 
