--- a/_posts/2025-5-12-여러가지 확률 분포 예측.md
+++ b/_posts/2025-5-12-여러가지 확률 분포 예측.md
@@ -187,7 +187,7 @@ $$
   - 손실 함수는 음의 로그 가능도(NLL)를 사용하며, 최종적으로 $\sum (\hat{\lambda}_i - y_i \log \hat{\lambda}_i)$ 형태에 비례한다.
   - 이 손실 함수를 최소화하도록 모델 파라미터 $\phi$를 학습함으로써, 모델은 주어진 입력에 대해 가장 가능성 높은 카운트 값을 예측하는 $\lambda$를 추정하게 된다.
 
-# 딥러닝 손실 함수의 통일된 원리: 확률 분포에서 시작하기
+# 딥러닝 손실 함수의 통일된 원리: 확률 분포
 
 딥러닝 모델을 학습시킨다는 것은 결국 모델의 예측과 실제 값 사이의 "오차"를 줄여나가는 과정이다. 이 "오차"를 어떻게 정의하느냐가 바로 손실 함수(Loss Function)의 역할이다. 다양한 문제 유형(회귀, 분류, 카운트 예측 등)에 따라 여러 가지 손실 함수가 사용되지만, 이들은 사실 하나의 깊은 원리를 공유하고 있다. 그 핵심은 바로 **확률 분포**와 **최대 가능도 원리(Maximum Likelihood Estimation, MLE)**에 기반한 **음의 로그 가능도(Negative Log-Likelihood, NLL)**이다.
 
