--- a/_posts/2025-5-7-확률분포 예측.md
+++ b/_posts/2025-5-7-확률분포 예측.md
@@ -5,7 +5,7 @@ excerpt: 'deeplearning'
 tags: [deeplearning]
 ---
 
-## 예측, 점을 넘어 분포로: 모델이 불확실성을 이야기하는 방법(훈련 단계)
+## 예측을 분포로: 모델의 불확실성(훈련 단계)
 
 기존의 많은 머신러닝 회귀 모델은 입력 $x$가 주어졌을 때, 특정 출력값 $y$ 하나만을 예측하는 방식으로 작동한다. 예를 들어, "내일의 예상 기온은 25도"와 같이 명확한 하나의 숫자를 제시한다. 하지만 현실 세계의 많은 문제는 본질적으로 불확실성을 내포한다. "내일 기온이 정확히 25도일까, 아니면 24도나 26도일 가능성은 없을까?" 이런 질문에 답하기 위해, 모델이 단순히 점(point) 예측을 넘어 출력값에 대한 전체 **확률 분포(probability distribution)**를 예측하는 접근 방식이 중요해지고 있다.
 
