--- a/_posts/2025-5-12-여러가지 확률 분포 예측.md
+++ b/_posts/2025-5-12-여러가지 확률 분포 예측.md
@@ -2,7 +2,7 @@
 key:
 title: '여러가지 확률 분포 예측'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 원형 데이터 예측을 위한 손실 함수 유도: 폰 미제스 분포와 NLL
