--- a/_posts/2025-5-13-전처리,후처리 과정.md
+++ b/_posts/2025-5-13-전처리,후처리 과정.md
@@ -2,7 +2,7 @@
 key:
 title: '다변량 회귀에서 특정 항의 치우침을 해결할 방법들'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 다변량 회귀에서 출력 스케일 불균형 문제와 해결책
