--- a/_posts/2025-5-14-오차함수 미분, 체인룰, convex.md
+++ b/_posts/2025-5-14-오차함수 미분, 체인룰, convex.md
@@ -2,7 +2,7 @@
 key:
 title: '오차함수 미분, 체인룰, convex함에 대해'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 선형 회귀의 손실 함수와 최적화: 미분과 볼록성의 이해
@@ -97,7 +97,7 @@ $$ f(tx_1 + (1-t)x_2) \le tf(x_1) + (1-t)f(x_2) $$
 
 그러면 비볼록 손실 함수를 다룰 떄는 어떤 식으로 돌아갈까? 즉 손실함수가 비선형함수일떄는?
 
-# 비볼록 손실 함수와 최적화의 난관: 지역 최솟값의 덫
+# 비볼록 손실 함수와 최적화의 난관인 지역 최솟값
 
 기계 학습 모델을 학습시키는 과정은 손실 함수를 최소화하는 최적의 파라미터를 찾는 여정과 같다. 선형 회귀 문제의 손실 함수는 특별한 성질을 가지고 있어 이 여정이 비교적 순탄하다. 그러나 대부분의 비선형 모델, 특히 신경망에서는 손실 함수의 형태가 복잡해지면서 여러 난관에 봉착하게 된다.
 
