--- a/_posts/2025-5-15-안장점.md
+++ b/_posts/2025-5-15-안장점.md
@@ -2,14 +2,14 @@
 key:
 title: '오차함수 미분에서 나오는 안장점'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 비볼록 함수의 또 다른 복병: 안장점 (Saddle Points) 파헤치기
 
 이전 글에서는 비볼록 손실 함수가 가진 여러 지역 최솟값(local minima) 때문에 최적의 해를 찾기 어렵다는 점을 살펴보았다. 하지만 비볼록 함수의 복잡한 지형에는 지역 최솟값 외에도 최적화를 방해하는 또 다른 장애물, 바로 **안장점(saddle point)**이 존재한다.
 
-## 1. 안장점이란 무엇인가? 임계점과 페르마 정리
+## 1. 안장점
 
 먼저 **임계점(critical point)**이라는 개념을 이해할 필요가 있다. 함수 $f$가 미분 가능할 때, 그래디언트 $\nabla f$가 0이 되는 지점, 즉 $\nabla f = \mathbf{0}$인 지점을 임계점이라고 한다. **페르마의 정리(Fermat's theorem on critical points)**에 따르면, 만약 어떤 함수가 특정 지점에서 지역 극값(local extremum, 즉 지역 최솟값 또는 지역 최댓값)을 가진다면, 그 지점은 반드시 임계점이어야 한다 (즉, 그 지점에서 그래디언트는 0이다).
 
@@ -78,7 +78,7 @@ print("-------------------------------------------------------------------")
 $$ \nabla f(x,y) = \left[ \frac{\partial f}{\partial x}, \frac{\partial f}{\partial y} \right] = [2x, -2y] $$
 이 식에서 볼 수 있듯이, $(0,0)$ 지점에서 그래디언트는 $[2(0), -2(0)] = [0,0]$ 이 된다.
 
-## 2. 그래디언트가 0이 되는 이유: 극값과 안장점의 차이
+## 2. 그래디언트가 0이 되는 이유
 
 그렇다면 왜 지역 최솟값/최댓값과 안장점 모두에서 그래디언트가 0이 될까? 그 근본적인 원리는 각 지점에서의 함수의 형태에 있다.
 
@@ -92,7 +92,7 @@ $$ \nabla f(x,y) = \left[ \frac{\partial f}{\partial x}, \frac{\partial f}{\part
     *   **y축 방향 (x=0 고정)**: 함수는 $f(0,y) = -y^2$가 된다. 이는 $y=0$에서 명백히 위로 오목한 최댓값을 가진다. 따라서 이 방향으로의 편미분 $\frac{\partial f}{\partial y}$는 $y=0$에서 0이다. ($-2y \big|_{y=0} = 0$)
     결국, 각 축 방향에서 "극값"의 성질을 가지기 때문에 각 편미분 값이 0이 되고, 결과적으로 전체 그래디언트 벡터 $\nabla f = [\frac{\partial f}{\partial x}, \frac{\partial f}{\partial y}]$가 $(0,0)$에서 $[0,0]$이 되는 것이다.
 
-## 3. 안장점, 왜 문제가 될까? "내리막길이 있는데?"
+## 3. 안장점 왜 문제가 될까? 
 
 여기서 한 가지 직관적인 의문이 생길 수 있다. "안장점에서 어떤 방향으로는 함수 값이 감소한다면, 즉 내리막길이 존재한다면, 경사 하강법이 그 길을 따라 내려가면 되는 것 아닌가? 왜 안장점이 문제가 되는 거지?"
 
