--- a/_posts/2025-5-19-여러 피팅모델 기법들.md
+++ b/_posts/2025-5-19-여러 피팅모델 기법들.md
@@ -2,14 +2,14 @@
 key:
 title: ' 네스테로프 가속 모멘텀 (NAG)과 최적화 과정 '
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 모멘텀의 진화: 네스테로프 가속 모멘텀 (NAG)과 최적화 과정의 시각적 이해
 
 이전 글에서는 확률적 경사 하강법(SGD)의 변동성을 줄이고 수렴 속도를 개선하기 위해 도입된 모멘텀(Momentum) 방식에 대해 알아보았다. 모멘텀은 과거의 업데이트 방향(관성)을 현재 업데이트에 반영하여 학습 경로를 부드럽게 하고, 특정 지형에서 학습을 가속하는 효과가 있었다. 이번 글에서는 모멘텀을 한 단계 더 발전시킨 **네스테로프 가속 모멘텀 (Nesterov Accelerated Momentum, NAG)**을 소개하고, 이러한 최적화 과정이 파라미터 공간과 손실 함수 위에서 어떻게 이루어지는지 시각 자료(그림 6.1)를 통해 직관적으로 이해해 본다.
 
-## 1. 네스테로프 가속 모멘텀 (NAG): 한 발 앞서 내다보기
+## 1. 네스테로프 가속 모멘텀 (NAG)
 
 일반적인 모멘텀 방식은 현재 위치에서 계산된 그래디언트와 이전의 모멘텀을 결합하여 다음 스텝을 결정한다. 반면, 네스테로프 가속 모멘텀(NAG)은 여기서 한 걸음 더 나아가, 모멘텀이 다음 스텝을 "예측"하는 능력을 더 적극적으로 활용한다.
 
