--- a/_posts/2025-5-3-선형함수로 비선형함수만드는 과정.md
+++ b/_posts/2025-5-3-선형함수로 비선형함수만드는 과정.md
@@ -2,7 +2,7 @@
 key:
 title: '선형함수로 비선형함수를 만드는 과정'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 ![image-20250503094542630](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20250503094542630.png)
