--- a/_posts/2025-5-7-확률분포 예측2.md
+++ b/_posts/2025-5-7-확률분포 예측2.md
@@ -2,7 +2,7 @@
 key:
 title: '정규분포 손실함수'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 딥러닝 모델의 확률적 예측과 손실 함수: 정규 분포에서 최소 제곱 오차로의 유도
