--- a/_posts/2025-5-9-확률 분포 예측3.md
+++ b/_posts/2025-5-9-확률 분포 예측3.md
@@ -2,7 +2,7 @@
 key:
 title: '바이너리, 카테고리 손실함수, 음의 가능도 손실함수'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 딥러닝에서의 확률적 예측: 분포, 파라미터, 그리고 가능도
