--- a/_posts/2025-11-3-이진화와 오츄 알고리즘.md
+++ b/_posts/2025-11-3-이진화와 오츄 알고리즘.md
@@ -65,7 +65,7 @@ plot_img(images, titles)
 
 ![image-20240528221449686](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528221449686.png)
 
-T를 구하는 과정을 생각해보면, T값을 중심으로 2개의 섹션을 나눠서 u는 각 섹션의 픽셀의 평균을, v는 각 섹션의 픽셀의 분산을 나타낸다, 그래서 그 분산의 값과 평균의 값을 곱한걸 더한게 가장 큰, 가장 좋은 T를 최종 임계값으로 하고자 하는거다. 각 섹션의 픽셀들의 명암 분포가 균일할수록, 적절하게 T를 중간에 넣었다는 말이기 때문이다, 그래서 분포값을 고려하는거다.
+T를 구하는 과정을 생각해보면, T값을 중심으로 2개의 섹션을 나눠서 u는 각 섹션의 픽셀의 평균을, v는 각 섹션의 픽셀의 분산을 나타낸다, 그래서 그 분산의 값과 가중치의 값을 곱한걸 더한게 가장 작은, 가장 좋은 T를 최종 임계값으로 하고자 하는거다. 각 섹션의 픽셀들의 명암 분포가 균일할수록, 적절하게 T를 중간에 넣었다는 말이기 때문이다, 그래서 분포값을 고려하는거다.
 
 ![image-20240528222111961](https://raw.githubusercontent.com/kirity1/blogimg/master/uPic/image-20240528222111961.png)
 
@@ -78,7 +78,7 @@ plt.show()
 height, width = img2.shape
 print(height, width)
 hist = cv2.calcHist([img2], [0], None, [256], [0, 256])
-hist_norm = hist.ravel() / hist.max()
+hist_norm = hist.ravel() / hist.sum()
 CDF = hist_norm.cumsum()
 
 #initialization
@@ -133,7 +133,7 @@ plot_img(images, titles)
 
 `m1, m2` / `v1, v2`: 나눠진 두 그룹 각각의 **평균**과 **분산**을 계산한다.
 
-`fn = v1 * q1 + v2 * q2`: **[핵심]** 두 그룹의 분산을 가중 평균 낸 값(Within-Class Variance)이다. 이 값이 작을수록 "같은 그룹끼리 잘 뭉쳐있다"는 뜻이므로, 우리는 이 `fn`이 최소가 되는 지점을 찾아야 한다.
+`fn = v1 * q1 + v2 * q2`:  두 그룹의 분산을 가중 평균 낸 값(Within-Class Variance)이다. 이 값이 작을수록 "같은 그룹끼리 잘 뭉쳐있다"는 뜻이므로, 이 `fn`이 최소가 되는 지점을 찾아야 한다.
 
 `if fn < fn_min`: 방금 계산한 분산값(`fn`)이 지금까지 찾은 최소값보다 작다면, "어? 이번 `i`가 더 좋네?" 하고 최적의 임계값(`thresh`)을 갱신한다.
 
