--- a/_posts/2025-3-19-lstm 파이토치 훈련.md
+++ b/_posts/2025-3-19-lstm 파이토치 훈련.md
@@ -2,7 +2,7 @@
 key:
 title: 'LSTM 생성 파이토치로 훈련과 실행'
 excerpt: 'LSTM'
-tags: [LSTM]
+tags: [인공지능]
 ---
 
 ```py
@@ -76,37 +76,9 @@ def __init__(self, vocab_size, embedding_dim, hidden_dim, dropout_rate=0.1):
 
 는 이 클래스를 처음 불러올 떄 시작하는 초기화코드이면서 그떄 embedding, lstm, dropout, fc 각각의 인스턴스에 해당하는 클래스들을 nn.module에서 가져와서 정의하는 초기화코드이다, 저번 변이형 오토 인코더는 그냥 내장 클래스를 이용하지않고 직접 vae의 인코더, 디코더, linear 등등 구조를 짠거다. 
 
-## 1. nn.Embedding
-
-### 기능
-
-- 단어 인덱스를 고정된 크기의 밀집 벡터로 변환하는 룩업 테이블
-
-- 자연어 처리에서 텍스트를 수치적으로 표현하는 데 필수적
-
-### 주요 매개변수
-
-- num_embeddings: 어휘 사전 크기 (단어의 개수)
-
-- embedding_dim: 임베딩 벡터의 크기
-
-## 2. nn.LSTM
-
-### 기능
-
-- Long Short-Term Memory 셀을 구현한 순환 신경망 층
-
-- 시퀀스 데이터 처리 및 장기 의존성 학습
-
-- 텍스트, 시계열 데이터 등의 순차 데이터 모델링에 사용
-
-### 주요 매개변수
-
-- input_size: 입력 특성의 수 (여기서는 embedding_dim)
-
-- hidden_size: 은닉 상태 벡터의 크기
-
-- batch_first: 입력 텐서의 첫 번째 차원이 배치 크기인지 여부
+- **`nn.Embedding`**: **단어의 룩업 테이블(Lookup Table)**이다. 컴퓨터는 '사과'라는 글자를 모른다. 대신 5번이라는 인덱스를 주면, 이 레이어가 5번에 해당하는 고유한 벡터(숫자들의 배열)를 꺼내준다. 자연어 처리의 필수 요소다.
+- **`nn.LSTM`**: 시계열 데이터의 핵심이다. `input_size`에는 임베딩된 벡터의 차원이 들어가고, `hidden_size`는 이 모델이 기억할 수 있는 메모리의 크기를 결정한다.
+- **`batch_first=True`**: 매우 중요한 옵션이다. 보통 입력 데이터는 `(배치 크기, 시퀀스 길이, 특징)` 순서로 들어오는데, PyTorch LSTM의 기본값은 `(시퀀스 길이, 배치 크기, ...)`다. 이 헷갈리는 차원 순서를 우리가 익숙한 배치가 먼저 오는 순서로 맞춰준다.
 
 lstm은 상당히 복잡하고 c++같은 로우레벨 언어로 최적화시켜야하는 편이 좋기 떄문에 파이토치 클래스에서 내장되있는 클래스를 활용하기로 했다.
 
@@ -119,61 +91,45 @@ def forward(self, x, hidden=None):
 
 ```
 
-LSTM 모델의 핵심 부분인 forward 메서드입니다. 이 메서드는 모델에 입력이 들어왔을 때 어떻게 처리되는지를 정의합니다.
+입력된 정수 ID들이 의미를 가진 밀집 벡터(Dense Vector)로 변환된다.
 
-- x: 입력 텐서로, 토큰 ID들의 시퀀스 [batch_size, seq_len]
-
-- hidden: 이전 타임스텝의 히든 스테이트(선택적 파라미터)
-
-```py
+```py/
 if hidden is None:
     output, hidden = self.lstm(embedded)
 else:
     output, hidden = self.lstm(embedded, hidden)
 ```
 
-- hidden이 제공되지 않으면 LSTM이 자체적으로 0으로 초기화
+여기서 `hidden` 변수의 처리가 중요하다.
 
-- hidden이 제공되면 이전 상태에서 계속 처리 (상태 유지)
+- **`hidden`이 없을 때:** 문장의 시작이거나, 이전 문맥과 관계없는 새로운 데이터를 처리할 때다. LSTM은 내부 상태를 0으로 초기화하고 시작한다.
+- **`hidden`이 있을 때:** 이전에 처리하던 문맥을 기억하고 있다가, 그 상태(State)를 이어서 학습한다. 긴 글을 생성할 때 필수적이다.
 
-- output: 모든 시점의 LSTM 출력 [배치크기, 시퀀스길이, 은닉차원]
-
-- hidden: 마지막 시점의 상태 튜플 (h_n, c_n)
-
-- h_n: 은닉 상태 (hidden state)
-
-- c_n: 셀 상태 (cell state)
+이 연산의 결과로 나오는 `output`은 각 시점(Time Step)에서의 은닉 상태들이고, `hidden`은 맨 마지막 시점의 상태(Short-term인 $h_n$과 Long-term인 $c_n$의 튜플)다.
 
 ```py
 output = self.dropout(output)
 ```
 
-- 과적합 방지를 위해 LSTM 출력의 일부 뉴런을 랜덤하게 0으로 설정
+과적합 방지를 위해 LSTM 출력의 일부 뉴런을 랜덤하게 0으로 설정하는데, 0.3 드롭아웃이면 30%의 값이 0으로 변경됨
 
-- 예: 0.3 드롭아웃이면 30%의 값이 0으로 변경됨
-
-- 학습 시에만 활성화되고 추론 시에는 비활성화됨
+학습 시에만 활성화되고 추론 시에는 비활성화됨
 
 ```py
 logits = self.fc(output)  # [batch_size, seq_len, vocab_size]
 ```
 
-- 선형 레이어를 통해 각 위치에서 다음 단어의 확률 분포 생성
-- 은닉 차원(hidden_dim)에서 어휘 크기(vocab_size) 차원으로 변환
-- 출력 크기: [배치크기, 시퀀스길이, 어휘크기]
-- 각 위치의 벡터는 다음 단어에 대한 점수(logits)
+LSTM이 내놓은 결과를 `vocab_size`만큼의 크기로 변환한다. 여기서 **로짓(Logits)**이라는 개념이 등장한다.
 
-여기서 logits라는 개념이 나오는데 전체적인 흐름은
+### 3. Logits(로짓)이란 무엇인가?
 
-1. 토큰은 어휘 사전에서 각 단어에 할당된 고유 ID입니다
+`logits`는 모델이 뱉어내는 **'원시 점수(Raw Score)'**다. 이 점수는 아직 확률이 아니다. 마이너스가 될 수도 있고, 100이 넘을 수도 있다. 전체 흐름은 다음과 같다.
 
-2. 로짓은 모델이 각 단어가 다음에 올 가능성에 대해 매긴 점수입니다
+1. **Logits:** 모델이 각 단어가 정답일 가능성을 매긴 날것의 점수.
+2. **Softmax:** 로짓을 0~1 사이의 값으로 변환하고, 총합이 1이 되도록 만든다 (확률 변환).
+3. **Sampling:** 확률 분포에 따라 다음 단어를 선택한다.
 
-3. 로짓을 softmax로 변환하여 확률을 얻습니다
-
-4. 이 확률에서 샘플링하여 새 토큰을 선택합니다
-
-이렇게 흘러간다. 즉 logits는 모델이 매긴 원시점수 개념이다.
+즉, `forward` 함수의 최종 리턴값인 `logits`는 **"내가 보기에 다음 단어로 단어장 1번은 5점, 2번은 -3점, 3번은 10점 정도 적절해 보여"**라고 말하는 모델의 판단 결과물이다. 우리는 나중에 이 점수를 확률로 바꿔서 글을 쓰게 된다.
 
 ### forward의 전체 흐름
 
@@ -304,13 +260,16 @@ def sample_from(self, probs, temperature=1.0):
     return sample_idx, probs.cpu().numpy()
 ```
 
-- 온도(temperature) 조절:
+### `sample_from`: 창의성을 조절하는 온도(Temperature)
 
-- 낮은 온도(예: 0.2): 확률이 높은 단어가 더 많이 선택됨 → 안전하지만 반복적인 텍스트
+이 함수가 생성기의 성격을 결정한다. `torch.multinomial`을 사용하여 확률 분포에 따라 주사위를 굴리는데, 이때 **Temperature($T$)**라는 개념을 도입하여 확률 분포의 모양을 바꾼다.
 
-- 높은 온도(예: 1.5): 확률 분포가 더 균등해짐 → 다양하지만 덜 일관된 텍스트
+수식으로 표현하면 $P_i = \frac{\exp(z_i/T)}{\sum \exp(z_j/T)}$ 와 같다.
 
-- 온도 1.0: 원래 모델 확률 그대로 사용
+- **Low Temperature ($T < 1.0$):** 분포가 뾰족해진다(Sharpening). 확률이 높은 단어는 더 높아지고, 낮은 단어는 더 낮아진다. 결과적으로 모델은 **보수적이고 정확하지만, 다소 반복적인 텍스트**를 생성한다.
+- **High Temperature ($T > 1.0$):** 분포가 평평해진다(Flattening). 확률이 낮았던 단어들도 뽑힐 기회가 생긴다. 결과적으로 **창의적이고 다양한 어휘를 쓰지만, 문법이 틀리거나 횡설수설할 위험**이 커진다.
+
+우리는 보통 $T=1.0$을 기준으로 두고, 상황에 따라 조절하며 최적의 값을 찾는다.
 
 - torch.multinomial(): 확률에 따라 토큰을 무작위로 샘플링
 
@@ -321,11 +280,11 @@ def generate(self, start_prompt, max_tokens=100, temperature=1.0):
        tokens.append(self.token2idx.get(word, self.token2idx['<UNK>']))
 ```
 
-- start_prompt: 생성을 시작할 초기 텍스트
-
-- max_tokens: 최대 생성할 토큰 수
-
-- temperature: 샘플링 다양성 조절
+1. **초기화:** 사용자가 준 `start_prompt`("옛날 옛적에")를 숫자로 바꾼다.
+2. **예측 (`model(x)`):** 현재까지의 문장을 모델에 넣는다. 모델은 문장의 모든 단어에 대해 예측값을 내놓지만, 우리는 **맨 마지막 단어의 다음 예측값(`logits[0, -1, :]`)**에만 관심이 있다.
+3. **샘플링:** 위에서 만든 `sample_from` 함수로 다음 단어를 하나 뽑는다.
+4. **업데이트:** 뽑힌 단어를 현재 문장 뒤에 붙인다. ("옛날 옛적에 호랑이가")
+5. **반복:** 완성된 문장이 나오거나(`<EOS>`), 정해진 길이(`max_tokens`)가 될 때까지 2~4번을 반복한다.
 
 그 후 시작프롬프트를 토큰 id로 변환
 
@@ -423,10 +382,6 @@ current_prompt = " ".join([self.idx2token[idx] for idx in tokens])
    info.append({"prompt": current_prompt, "word_probs": word_probs})
    tokens.append(next_token)
 ```
-
-- 현재 프롬프트와 단어 확률을 저장합니다.
-
-- 생성된 토큰을 추가합니다.
 
 ```py
 # 모델 초기화 함수
