--- a/_posts/2025-3-9-변이형 오토 인코더 실습.md
+++ b/_posts/2025-3-9-변이형 오토 인코더 실습.md
@@ -2,7 +2,7 @@
 key:
 title: '변이형 오토인코더 코드 만들어보기'
 excerpt: '변이형 오토인코더'
-tags: [VAE]
+tags: [인공지능]
 ---
 
 ```py
@@ -147,7 +147,7 @@ print(model)
 
 #### log로 분산을 계산하는 이유
 
-ㅋ₩분산은 항상 0 이상의 값을 가져야 하지만, 로그를 취하면 값의 범위가 (−∞,∞)(−∞,∞)가 되어 수치적으로 안정적인 학습이 가능 , 나중에 reparameterization trick에서 𝜎=exp⁡(0.5×logvar)*σ*=exp(0.5×logvar)로 계산 
+분산은 항상 0 이상의 값을 가져야 하지만, 로그를 취하면 값의 범위가 (−∞,∞)(−∞,∞)가 되어 수치적으로 안정적인 학습이 가능 , 나중에 reparameterization trick에서 𝜎=exp⁡(0.5×logvar)*σ*=exp(0.5×logvar)로 계산 
 
 #### view() 함수의 역할
 
@@ -223,8 +223,6 @@ KL 항에 대한 Annealing (가중치 스케일링)
 이러한 작업들을 한 이유는 후방 붕괴가 일어났기 떄문에
 
 ### batch_idx와 (data, _)의 역할 및 _의 의미
-
-for batch_idx, (data, _) in enumerate(dataloader) 구문 설명:
 
 #### enumerate(dataloader)
 
@@ -318,31 +316,31 @@ all_mu[:, 1]: 모든 샘플의 두 번째 latent 차원 값.
 
 #### c=all_labels
 
-c는 각 산점도 점의 색상(color)을 지정하는 매개변수입니다.
+c는 각 산점도 점의 색상(color)을 지정하는 매개변수
 
-여기서는 각 데이터 포인트의 색상을 all_labels 값에 따라 지정합니다.
+여기서는 각 데이터 포인트의 색상을 all_labels 값에 따라 지정
 
-즉, all_labels에 들어있는 숫자나 범주 값에 따라 점들의 색상이 결정됩니다.
+즉, all_labels에 들어있는 숫자나 범주 값에 따라 점들의 색상이 결정
 
-예를 들어, 만약 all_labels가 0부터 9까지의 숫자로 구성되어 있다면, 각 숫자마다 다른 색상이 할당되어 시각적으로 구분할 수 있게 됩니다.
+예를 들어, 만약 all_labels가 0부터 9까지의 숫자로 구성되어 있다면, 각 숫자마다 다른 색상이 할당되어 시각적으로 구분할 수 있게 됌
 
 #### cmap='viridis'
 
-cmap은 colormap (색상 맵)을 지정하는 매개변수입니다.
+cmap은 colormap (색상 맵)을 지정하는 매개변수
 
-'viridis'는 matplotlib에서 제공하는 colormap 중 하나입니다.
+'viridis'는 matplotlib에서 제공하는 colormap 중 하나
 
-이 colormap은 데이터의 값에 따라 일관되고 시각적으로 구분하기 쉬운 색상 그라데이션(예, 파랑에서 노랑 또는 보라에서 노랑)으로 설정됩니다.
+이 colormap은 데이터의 값에 따라 일관되고 시각적으로 구분하기 쉬운 색상 그라데이션(예, 파랑에서 노랑 또는 보라에서 노랑)으로 설정
 
-즉, all_labels에 의해 매핑된 값들이 'viridis'라는 colormap에 의해 특정 색상으로 변환됩니다.
+즉, all_labels에 의해 매핑된 값들이 'viridis'라는 colormap에 의해 특정 색상으로 변환
 
 #### s=2
 
-s는 산점도에서 각 점의 크기(size)를 지정하는 매개변수입니다.
+s는 산점도에서 각 점의 크기(size)를 지정하는 매개변수
 
-값이 2로 지정되어 있으므로, 각 데이터 포인트가 작고 촘촘하게 나타나게 됩니다.
+값이 2로 지정되어 있으므로, 각 데이터 포인트가 작고 촘촘하게 나타나게 됌
 
-점의 크기는 시각화의 밀도나 전체 그림에서의 밸런스를 맞추기 위해 조정할 수 있습니다.
+점의 크기는 시각화의 밀도나 전체 그림에서의 밸런스를 맞추기 위해 조정할 수 있음
 
 ```py
 # 7. 평가: 원본 이미지와 재구성 이미지 비교
@@ -374,7 +372,7 @@ plot_reconstructions(model, test_dataloader, device, n=10)
 
 #### .squeeze()
 
-텐서의 불필요한 차원(크기가 1인 차원)을 제거합니다. 예를 들어, [1, 1, IMAGE_SIZE, IMAGE_SIZE]를 [IMAGE_SIZE, IMAGE_SIZE]로 만들어서 이미지 형태로 쓰기 좋게 합니다.
+텐서의 불필요한 차원(크기가 1인 차원)을 제거합니다. 예를 들어, [1, 1, IMAGE_SIZE, IMAGE_SIZE]를 [IMAGE_SIZE, IMAGE_SIZE]로 만들어서 이미지 형태로 쓰기 좋게 함
 
 ```py
 # 8. 평가: 잠재 공간 격자 샘플링으로 이미지 생성 (잠재 차원이 2인 경우에만 수행)
