--- a/_posts/2025-5-9-크로스엔트로피와 kl발산.md
+++ b/_posts/2025-5-9-크로스엔트로피와 kl발산.md
@@ -2,7 +2,7 @@
 key:
 title: 'kl발산과 크로스 엔트로피'
 excerpt: 'deeplearning'
-tags: [deeplearning]
+tags: [인공지능]
 ---
 
 # 교차 엔트로피, KL 발산, 그리고 음의 로그 가능도의 관계
