--- a/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
+++ b/_posts/2024-12-29-생성 모델링 확률 이론 공부.md
@@ -7,7 +7,7 @@ tags: [확률이론]
 
 ## 확률 밀도 함수
 
-확률 밀도 함수란 어떠한 X집합(X = x1,x2,x3...)이 있을 떄, 0과 1 사이의 숫자로 매핑하는 함수 P(x), 표본 공간에 있는 모든 포인트에 대해 밀도 함수를 적분 했을 떄 1이 되어야 한다.
+확률 밀도 함수란 어떠한 X집합(X = x1,x2,x3...)이 있을 떄, 특정 구간에서의 적분값이 확률이 되도록 하는 함수 $P(x)$, 표본 공간에 있는 모든 포인트에 대해 밀도 함수를 적분 했을 떄 1이 되어야 한다.
 
 이 떄 관측 데이터 셋을 생성하는 실제 밀도 함수 $P_{data}(x)$ 는 하나지만, 이 밀도 함수를 추정하는데 사용할 수 있는 밀도 함수 $P_{model}(x)$는 무수히 많다, 즉 실제 밀도 함수를 구하는게 모델링 입장에선 베스트겠지만, 불가능 하기 떄문에 저 함수를 추정하는 밀도 함수 $P_{model}(x)$ 중에서 가장 원본과 가까운 함수를 구하고자, 관측 데이터 셋에 가장 가깝게 찍어 내는 모델 함수를 구하고자 하는거다.
 
