--- a/_posts/2025-10-29-pixelcnn이해3.md
+++ b/_posts/2025-10-29-pixelcnn이해3.md
@@ -85,7 +85,7 @@ Skew 변환 후:
 
 **해결책:** 이제 픽셀 11을 계산하기 위해 필요한 7과 10은 모두 **"이미 계산이 끝난 이전 열"**에 존재한다. 더 놀라운 점은, 원래 11번과 같은 열에 있어서 발목을 잡던 **3, 7, 15번 픽셀들이 이제는 모두 서로 다른 열로 흩어졌거나, 의존 관계가 없는 위치로 갔다**는 것이다.
 
-#### 3. 결론: 열 내부의 완전한 병렬화
+#### 3.  병렬화
 
 이 트릭의 핵심은 이것이다.
 
@@ -111,7 +111,7 @@ Skew 변환 후:
 
 왜 저렇냐면 
 
-### 1x1 Masked Convolution: 채널에도 순서가 있다
+### 1x1 Masked Convolution:
 
 우리가 흔히 아는 1x1 Convolution은 모든 채널의 정보를 섞어서(Linear Combination) 새로운 특징을 만들어낸다. 하지만 PixelCNN에서는 이 '섞임'조차 함부로 허용해선 안 된다. 왜냐하면 **색상(Color) 정보끼리도 인과관계(순서)가 존재하기 때문이다.**
 
