--- a/_posts/2025-3-13-LSTM 생성 파이토치로.md
+++ b/_posts/2025-3-13-LSTM 생성 파이토치로.md
@@ -33,13 +33,13 @@ import sys
 # 코랩일 경우 데이터셋 다운로드
 if 'google.colab' in sys.modules:
     # 캐글-->Setttings-->API-->Create New Token에서
-    # kaggle.json 파일을 만들어 코랩에 업로드하세요.
+    # kaggle.json 파일을 만들어 코랩에 업로드
     from google.colab import files
     files.upload()
     !mkdir ~/.kaggle
     !cp kaggle.json ~/.kaggle/
     !chmod 600 ~/.kaggle/kaggle.json
-    # epirecipes 데이터셋을 다운로드하고 압축을 해제합니다.
+    # epirecipes 데이터셋을 다운로드하고 압축을 해제
     !kaggle datasets download -d hugodarwood/epirecipes
     !unzip -q epirecipes.zip
 ```
@@ -59,7 +59,7 @@ filtered_data = [
     and x["directions"] is not None
 ]
 
-# 구두점을 분리하여 별도의 '단어'로 취급합니다.
+# 구두점을 분리하여 별도의 '단어'로 취급
 def pad_punctuation(s):
     s = re.sub(f"([{string.punctuation}])", r" \1 ", s)
     s = re.sub(" +", " ", s)
