--- a/_posts/2025-3-14-변이형 오토 인코더 얼굴생성.md
+++ b/_posts/2025-3-14-변이형 오토 인코더 얼굴생성.md
@@ -67,7 +67,7 @@ data_transform = transforms.Compose([
 
 # 데이터셋 로드
 # ImageFolder함수는 지정한 root 폴더 내의 서브폴더 구조를 기준으로 라벨을 자동 생성하지만,
-# 만약 라벨 없이 이미지 파일만 있는 경우, 모든 이미지를 읽어오게 됩니다.
+# 만약 라벨 없이 이미지 파일만 있는 경우, 모든 이미지를 읽어오게 됌.
 data_dir = './data/img_align_celeba/'
 full_dataset = datasets.ImageFolder(root=data_dir, transform=data_transform)
 
@@ -98,8 +98,8 @@ print(f"레이블 텐서 크기: {label.shape}")
 ```py
 def sample_batch(loader):
     #DataLoader에서 첫 번째 배치를 추출하여 반환하는 함수.
-    #ImageFolder를 사용하면 배치마다 (이미지, 라벨) 튜플을 반환합니다.
-    #여기서는 주로 시각화용으로 이미지 배치만 사용합니다.
+    #ImageFolder를 사용하면 배치마다 (이미지, 라벨) 튜플을 반환
+    #여기서는 주로 시각화용으로 이미지 배치만 사용
     batch = next(iter(loader))
     images, _ = batch #ImageFolder함수는 (이미지, 라벨) 튜플을 반환하므로 여기선 라벨 필요 없으니 _로 생략
     return images
@@ -118,18 +118,18 @@ def show_face_batch(batch, nrow=8):
       nrow: 그리드에서 한 행에 표시할 이미지 수
     """
     # make_grid를 이용해 배치 이미지를 하나의 큰 이미지(grid)로 만듦.
-    # normalize=True 옵션을 주면 픽셀 값을 [0, 1] 범위로 정규화합니다.
+    # normalize=True 옵션을 주면 픽셀 값을 [0, 1] 범위로 정규화
     grid_img = make_grid(batch, nrow=nrow, padding=2, normalize=True)
     
     plt.figure(figsize=(10, 10))
-    # 텐서의 shape은 (C, H, W)이므로, (H, W, C)로 변경해 matplotlib에서 올바르게 표시되게 합니다.
+    # 텐서의 shape은 (C, H, W)이므로, (H, W, C)로 변경해 matplotlib에서 올바르게 표시되게 함.
     plt.imshow(grid_img.permute(1, 2, 0).cpu().numpy())
     plt.title("훈련 세트의 일부 얼굴 이미지")
     plt.axis("off")
     plt.show()
 
 # DataLoader에서 배치 하나를 가져오는 예시.
-# 만약 DataLoader가 (이미지, 레이블) 튜플을 반환한다면 images만 사용합니다.
+# 만약 DataLoader가 (이미지, 레이블) 튜플을 반환한다면 images만 사용
 show_face_batch(train_sample)
 ```
 
@@ -237,7 +237,7 @@ def vae_loss(recon_x, x, mu, logvar, beta=BETA):
   
 import torch.optim as optim
 
-# 옵티마이저 정의 (학습률은 필요에 따라 조절)
+# 옵티마이저 정의 
 optimizer = optim.Adam(model.parameters(), lr=0.0005)
 
 # 에포크 수 설정
@@ -245,7 +245,7 @@ num_epochs = 10
 
 # --- Training / Testing Loop 함수 정의 ---
 def train_epoch(model, data_loader, optimizer):
-    model.train() #모델을 훈련시킨다고 명시하기 위한 코드
+    model.train() 
     total_loss, total_recon, total_kl = 0.0, 0.0, 0.0
     for batch_idx, (images, _) in enumerate(data_loader):
         images = images.to(device)
@@ -580,7 +580,7 @@ VALIDATION_SPLIT = 0.2
 transform = transforms.Compose([
     transforms.Resize((IMAGE_SIZE, IMAGE_SIZE)),
     transforms.ToTensor(),
-    # 추가 전처리(정규화 등)를 여기에 추가할 수 있습니다.
+    # 추가 전처리(정규화 등)를 여기에 추가할 수 있음.
 ])
 
 # 데이터셋 생성: 이미지 폴더와 CSV 파일 경로, 사용할 레이블 열 이름 지정
