--- a/_posts/2025-3-4-오토인코더 실습.md
+++ b/_posts/2025-3-4-오토인코더 실습.md
@@ -58,7 +58,7 @@ EPOCHS = 3
 
 ```python
 
-# 데이터를 로드합니다.
+# 데이터를 로드
 
 (x_train, y_train), (x_test, y_test) = datasets.fashion_mnist.load_data()
   
@@ -96,7 +96,7 @@ x_test = preprocess(x_test)
 
 ```python
 
-# 훈련 세트에 있는 의류 아이템 일부를 출력합니다.
+# 훈련 세트에 있는 의류 아이템 일부를 출력
 
 display(x_train)
 
@@ -130,7 +130,7 @@ x = layers.Conv2D(64, (3, 3), strides=2, activation="relu", padding="same")(x)
 
 x = layers.Conv2D(128, (3, 3), strides=2, activation="relu", padding="same")(x)
 
-shape_before_flattening = K.int_shape(x)[1:] # 디코더에 필요합니다!
+shape_before_flattening = K.int_shape(x)[1:] # 디코더에 필요
 
   
 
@@ -424,7 +424,7 @@ display(predictions)
 
 ```python
 
-# 샘플 이미지를 인코딩합니다.
+# 샘플 이미지를 인코딩
 
 embeddings = encoder.predict(example_images)
   
@@ -432,7 +432,7 @@ embeddings = encoder.predict(example_images)
 
 ```python
 
-# 몇 개의 임베딩을 출력합니다.
+# 몇 개의 임베딩을 출력
 
 print(embeddings[:10])
 
@@ -520,7 +520,7 @@ mins, maxs = np.min(embeddings, axis=0), np.max(embeddings, axis=0)
 
   
 
-# 잠재 공간에서 포인트를 샘플링합니다.
+# 잠재 공간에서 포인트를 샘플링
 
 grid_width, grid_height = (6, 3)
 
@@ -535,7 +535,7 @@ mins, maxs, size=(grid_width * grid_height, EMBEDDING_DIM)
 
 ```python
 
-# 샘플링된 포인트를 디코딩합니다.
+# 샘플링된 포인트를 디코딩
 
 reconstructions = decoder.predict(sample)
   
@@ -543,7 +543,6 @@ reconstructions = decoder.predict(sample)
 
 ```python
 
-# 그래프로 그립니다.
 
 figsize = 8
 
@@ -551,13 +550,13 @@ plt.figure(figsize=(figsize, figsize))
 
   
 
-# ... 원본 임베딩 ...
+# 원본 임베딩
 
 plt.scatter(embeddings[:, 0], embeddings[:, 1], c="black", alpha=0.5, s=2)
 
   
 
-# ... 잠재 공간에서 새로 생성된 포인트
+# 잠재 공간에서 새로 생성된 포인트
 
 plt.scatter(sample[:, 0], sample[:, 1], c="#00B0F0", alpha=1, s=40)
 
@@ -601,7 +600,7 @@ ax.imshow(reconstructions[i, :, :], cmap="Greys")
 
 ```python
 
-# 레이블(의류 종류)에 따라 임베딩에 색을 입힙니다.
+# 레이블(의류 종류)에 따라 임베딩에 색을 입힘.
 
 figsize = 12
 
