--- a/_posts/2025-5-20-Adam.md
+++ b/_posts/2025-5-20-Adam.md
@@ -1,6 +1,6 @@
 ---
 key:
-title: 'Adam, 변동적인 모멘텀'
+title: 'Adam, 모멘텀'
 excerpt: 'deeplearning'
 tags: [인공지능]
 ---
@@ -66,20 +66,19 @@ $$
 
 ## Adam의 장점
 
--   **구현 용이성**: 상대적으로 구현이 간단하다.
--   **계산 효율성**: 계산적으로 효율적이다.
--   **메모리 요구량 적음**: 필요한 메모리 양이 적다.
+-   **계산 효율성**
+-   **메모리 요구량 적음**
 -   **파라미터별 적응적 학습률**: 각 파라미터에 대해 서로 다른 학습률을 적용하여 학습 과정을 개선한다.
 -   **다양한 문제에 적합**: 고정적이지 않은 목적 함수(non-stationary objectives)나 매우 희소한 그래디언트(sparse gradients)를 가진 문제에도 잘 작동하는 경향이 있다.
 -   **초기 학습률 설정에 덜 민감**: 다른 최적화 알고리즘에 비해 초기 학습률 값에 덜 민감한 편이다.
 
 이러한 특징들로 인해 Adam은 현재 딥러닝 분야에서 가장 널리 사용되는 최적화 알고리즘 중 하나로 자리매김했다.
 
-# Adam 파헤치기: $m_t$와 $v_t$는 어떻게 학습을 조율하는가?
+# $m_t$와 $v_t$는 어떻게 학습을 조율하는가?
 
-Adam 알고리즘의 핵심은 1차 모멘트 추정치 $m_t$와 2차 모멘트 추정치 $v_t$를 사용하여 파라미터 업데이트를 정교하게 조율하는 데 있다. 이 두 추정치가 각각 어떤 정보를 담고 있으며, 어떻게 상호작용하여 Adam의 강력한 성능을 이끌어내는지 자세히 살펴보자.
+Adam 알고리즘의 핵심은 1차 모멘트 추정치 $m_t$와 2차 모멘트 추정치 $v_t$를 사용하여 파라미터 업데이트를 정교하게 조율하는 데 있다. 이 두 추정치가 각각 어떤 정보를 담고 있으며, 어떻게 상호작용하여 Adam의 강력한 성능을 이끌어내냐면
 
-## $m_t$: 업데이트의 방향과 기본적인 추진력 - "어디로, 얼마나 세게 갈 것인가?"
+## $m_t$: 업데이트의 방향과 기본적인 추진력 - 어디로, 얼마나 세게 갈 것인가?
 
 $m_t$는 그래디언트 자체의 지수 이동 평균이다:
 $$m_t = \beta_1 \cdot m_{t-1} + (1 - \beta_1) \cdot g_t$$
@@ -90,13 +89,13 @@ $$m_t = \beta_1 \cdot m_{t-1} + (1 - \beta_1) \cdot g_t$$
 -   **모멘텀의 역할**: 만약 현재 미니배치의 그래디언트 $g_t$가 이전의 $m_{t-1}$과 유사한 방향을 가리킨다면, $m_t$는 그 방향으로 더 큰 추진력을 갖게 된다. 반대로, $g_t$가 이전과 다른 방향을 가리키거나 그래디언트들이 서로 상쇄되면, $m_t$의 크기는 작아져 업데이트 강도가 약해진다. 이는 마치 언덕을 내려오는 공처럼, 일관된 경사에서는 가속도가 붙고, 평지나 불규칙한 지형에서는 속도가 줄어드는 것과 유사하다.
 -   **"평균적으로 얼마나 세게"**: $m_t$의 크기(norm)는 그래디언트의 평균적인 세기를 나타낸다. 하지만 중요한 것은 이 세기가 방향성을 동반한다는 점이다. 따라서 $m_t$는 "어느 방향으로, 평균적으로 얼마나 세게 나아갈지"에 대한 종합적인 정보를 제공한다.
 
-## $v_t$: 그래디언트 크기의 변동성 이력 - "이 파라미터는 과거에 얼마나 요란하게 움직였나?"
+## $v_t$: 그래디언트 크기의 변동성 이력 - 이 파라미터는 과거에 얼마나 요란하게 움직였나?
 
 $v_t$는 그래디언트 **제곱값**의 지수 이동 평균이다:
 $$v_t = \beta_2 \cdot v_{t-1} + (1 - \beta_2) \cdot g_t^2$$
 
 -   **정보의 본질**: $g_t^2$는 그래디언트 벡터 $g_t$의 각 성분을 제곱한 것이다. 이 제곱 연산으로 인해 $v_t$는 그래디언트의 **방향 정보를 완전히 잃어버리고, 오직 크기의 제곱에 대한 정보**만을 담게 된다. 즉, 그래디언트가 $+5$였든 $-5$였든, 제곱하면 $25$가 되어 $v_t$에 동일한 크기의 영향을 미친다.
--   **변동성의 척도**: $v_t$는 각 파라미터에 대한 그래디언트가 과거에 평균적으로 얼마나 "컸었는지" 또는 "작았었는지"를 나타낸다. 이 값이 크다는 것은 해당 파라미터의 그래디언트가 (양의 방향이든 음의 방향이든 상관없이) 지속적으로 큰 값을 가져왔음을 의미하며, 이는 손실 함수 표면에서 해당 파라미터 축 방향으로 변화가 "가파르거나 변동이 심했음"을 시사한다. 반대로 $v_t$가 작다면 변화가 "완만했음"을 의미한다.
+-   **변동성의 척도**: $v_t$는 각 파라미터에 대한 그래디언트가 과거에 평균적으로 얼마나 "컸었는지" 또는 "작았었는지"를 나타낸다. 이 값이 크다는 것은 해당 파라미터의 그래디언트가 (양의 방향이든 음의 방향이든 상관없이) 지속적으로 큰 값을 가져왔음을 의미하며, 이는 손실 함수 표면에서 해당 파라미터 축 방향으로 변화가 "가파르거나 변동이 심했음"을 말한다. 반대로 $v_t$가 작다면 변화가 "완만했음"을 의미한다.
 -   **제곱의 효과와 RMS와의 유사성**: 제곱을 통해 큰 그래디언트 값은 $v_t$에 더욱 큰 영향을 미친다. $\sqrt{v_t}$는 그래디언트 크기의 RMS(Root Mean Square, 제곱-평균-제곱근)와 유사한 개념으로, 신호의 평균적인 진폭이나 에너지 크기를 나타내는 지표로 해석될 수 있다. 즉, "이 파라미터의 그래디언트는 평균적으로 이 정도 크기의 스케일을 갖는다"라는 정보를 제공한다.
 
 ## $m_t$와 $v_t$의 협력
