--- a/_posts/2025-5-7-확률분포 예측2.md
+++ b/_posts/2025-5-7-확률분포 예측2.md
@@ -106,7 +106,7 @@ $$
 
 이걸 보면 위는 MSE, 아래는 NLL 인데 여기서 생각해봐야 할 것이 위의 식 과정은 어디까지나 분산을 상수로 고정 할 떄 손실함수로 파라미터를 찾는 과정을 나타낸거고 이 그래프는 실제 손실함수를 이용해서 값을 구하는 과정으로 이 떈 분산이 쓰인다.
 
-# 최소 제곱 오차(MSE)와 음의 로그 가능도(NLL): 같은 듯 다른 두 손실 함수
+# 최소 제곱 오차(MSE)와 음의 로그 가능도(NLL):
 
 선형 회귀 모델을 학습할 때 흔히 손실 함수로 최소 제곱 오차(MSE)를 사용한다. 그런데 확률적 관점에서 모델을 바라보면 음의 로그 가능도(NLL)라는 개념이 등장하고, 특정 조건 하에서는 이 NLL을 최소화하는 것이 MSE를 최소화하는 것과 동일한 모델 파라미터를 찾는 것으로 귀결된다. 그렇다면 이 둘은 같은 것일까, 아니면 다른 의미를 지니는 것일까?
 
@@ -128,7 +128,7 @@ $$
 
 이것이 바로 MSE를 최소화하는 것과 동일하다. 즉, "최적의 선을 찾는" 관점에서는 두 방법이 같은 결과를 도출한다.
 
-## 2. 무엇이 다른가? $ \sigma^2 $의 역할과 확률적 해석
+## 2. 무엇이 다른가? 
 
 그렇다면 왜 NLL이라는, 상대적으로 복잡해 보이는 경로를 고려하는 것일까?
 
