--- a/_posts/2025-5-9-확률 분포 예측3.md
+++ b/_posts/2025-5-9-확률 분포 예측3.md
@@ -49,7 +49,7 @@ $$
 L(\phi) = -\sum_i \sum_k y_{ik} \log(\hat{\lambda}_{ik})
 $$
 
-## 3. 핵심 원리: 모델은 분포의 파라미터를 예측하고, 학습을 통해 개선한다
+## 3. 핵심 원리
 
 다양한 유형의 문제(회귀, 이진 분류, 다중 클래스 분류 등)에서 NLL이 일관된 프레임워크로 사용될 수 있는 근본적인 이유는 모델이 실제 관측값 $y_i$ 자체를 직접 예측하는 것이 아니라, $y_i$가 특정 확률 분포를 따른다고 가정하고 그 **분포를 특정짓는 파라미터(들)을 예측**하기 때문이다.
 
@@ -61,7 +61,7 @@ $$
 
 이러한 접근 방식은 오차제곱합(Sum of Squared Errors, SSE)과 대비된다. SSE는 $L = \sum_i (y_i - \hat{y}_i)^2$로 정의되며, 모델의 직접적인 예측치 $\hat{y}_i$와 실제값 $y_i$의 차이를 사용한다. 흥미롭게도, SSE는 NLL의 특별한 경우로 볼 수 있다. 만약 모델 오차 $y_i - \hat{y}_i$가 평균이 0이고 분산이 일정한 정규분포를 따른다고 가정하면 (즉, $y_i \sim \mathcal{N}(\hat{y}_i, \sigma^2)$이고 $\sigma^2$이 상수), NLL을 최소화하는 것은 SSE를 최소화하는 것과 동등해진다. NLL은 이처럼 특정 가정을 넘어 다양한 확률 분포와 문제 유형에 적용될 수 있는 더 일반적이고 유연한 원칙을 제공한다.
 
-## 4. 학습 과정: 가능도 최대화를 향한 분포의 점진적 진화
+## 4. 학습 과정
 
 딥러닝 모델이 어떻게 최적의 분포 파라미터를 예측하도록 학습하는지 그 과정을 살펴보자.
 
@@ -79,7 +79,7 @@ $$
 
 이 과정을 훈련 데이터셋 전체에 대해 반복함으로써, 모델은 점차 각 입력에 대해 실제 데이터의 패턴을 가장 잘 반영하는 확률 분포 파라미터를 예측하는 능력을 학습하게 된다.
 
-## 5. 베르누이 분포의 $\lambda$: 왜 "분포 파라미터"인가?
+## 5. 베르누이 분포의 $\lambda$
 
 정규분포에서 평균 $\mu$와 분산 $\sigma^2$이 분포의 모양(위치, 퍼짐 정도)을 결정하는 파라미터라는 점은 직관적이다. 그러나 베르누이 분포의 파라미터 $\lambda$는 그 자체가 "$y=1$일 확률"이라는 직접적인 의미를 갖기 때문에, 이것이 어떻게 분포 전체를 대표하는 "파라미터" 역할을 하는지 의문이 들 수 있다.
 
