--- a/_posts/2025-5-15-안장점.md
+++ b/_posts/2025-5-15-안장점.md
@@ -5,7 +5,7 @@ excerpt: 'deeplearning'
 tags: [인공지능]
 ---
 
-# 비볼록 함수의 또 다른 복병: 안장점 (Saddle Points) 파헤치기
+# 비볼록 함수의 또 다른 복병: 안장점 (Saddle Points)
 
 이전 글에서는 비볼록 손실 함수가 가진 여러 지역 최솟값(local minima) 때문에 최적의 해를 찾기 어렵다는 점을 살펴보았다. 하지만 비볼록 함수의 복잡한 지형에는 지역 최솟값 외에도 최적화를 방해하는 또 다른 장애물, 바로 **안장점(saddle point)**이 존재한다.
 
