--- a/_posts/2025-5-9-크로스엔트로피와 kl발산.md
+++ b/_posts/2025-5-9-크로스엔트로피와 kl발산.md
@@ -65,4 +65,4 @@ $ \hat{\phi} = \underset{\phi}{\text{argmin}} \left[ -\sum_{i=1}^{I} \log[P(y_i\
 
 이는 이 장에서 다양한 모델(회귀, 이진 분류, 다중 클래스 분류)에 걸쳐 일관되게 사용해 온 손실 함수와 정확히 일치한다.
 
-결론적으로, 음의 로그 가능도를 최소화하는 방식으로 모델을 학습시키는 것은, 정보 이론적 관점에서 볼 때 실제 데이터의 경험적 분포와 모델이 예측하는 분포 사이의 교차 엔트로피(또는 KL 발산)를 최소화하려는 시도와 수학적으로 동등하다. 이는 NLL을 손실 함수로 사용하는 것에 대한 강력한 이론적 정당성을 제공한다.
+결론적으로, 음의 로그 가능도를 최소화하는 방식으로 모델을 학습시키는 것은, 정보 이론적 관점에서 볼 때 실제 데이터의 경험적 분포와 모델이 예측하는 분포 사이의 교차 엔트로피(또는 KL 발산)를 최소화하려는 시도와 수학적으로 동등하다. 
